[gd_scene load_steps=6 format=3 uid="uid://c3tf8lgqr46ly"]

[ext_resource type="Script" path="res://Scenes/obstacle.gd" id="1_dthq4"]
[ext_resource type="Texture2D" uid="uid://dt6pguhxf4o4g" path="res://Imported Assets/kenney_pixel-platformer-blocks/Tiles/Marble/tile_0015.png" id="1_vkuje"]
[ext_resource type="Texture2D" uid="uid://ccqxwubvo7rba" path="res://Sprites/killSwitch.png" id="2_qfqif"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ldwj6"]
size = Vector2(36, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_a4hm4"]
size = Vector2(26, 8)

[node name="Obstacle" type="StaticBody2D" node_paths=PackedStringArray("button_sprite")]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_dthq4")
button_sprite = NodePath("Area2D/ButtonSprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("1_vkuje")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_ldwj6")

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, -19)
scale = Vector2(-1, 1)

[node name="ButtonSprite2D" type="Sprite2D" parent="Area2D"]
position = Vector2(0, -1)
scale = Vector2(0.43702, 0.248039)
texture = ExtResource("2_qfqif")
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 3)
shape = SubResource("RectangleShape2D_a4hm4")

[node name="DestructionTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="DestructionTimer" to="." method="_on_destruction_timer_timeout"]
